--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 </head>
 <body>
     <header>
-        <img src="imagenes/logo-club.jpg" alt="Logo del Club">
-        <div>
+        <div style="text-align: center;">
+            <img src="imagenes/logo-club.jpg" alt="Logo del Club" style="width: 120px; height: auto; margin-bottom: 10px;">
             <h1>Club de Lectura: CRACKS GDL</h1>
             <p>"VIVIR SIN LEER ES PELIGROSO, PORQUE OBLIGA A CONFORMARSE CON LA VIDA"</p>
             <p>Fecha de creación del club: 28/01/2025</p>
